--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.2.2",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isaacssemugenyi/transform-array-list.git"
+  },
   "scripts": {
     "test": "jest *.spec.js"
   },
